# image-upscaling-system

./: .cache_ggshield  .env.example  .gitignore  ANALISE_GITHUB_FINAL.md  CHANGELOG.md  CONFIG_MCP_VSCODE.md  CONTRIBUTING.md  Dockerfile.mcp  GUIA_INICIO_RAPIDO.md  LICENSE  PUBLISH_GITHUB.md  README.md  README_MCP.md  README_NEW.md  __init__.py  config.py  diagnostico.py  mcp-settings.json  pyproject.toml  requirements.txt  run-mcp-github.sh  run_app.py  run_mcp_github.sh  setup-github-token.sh  setup_github.sh
apps/: __init__.py  app_final.py
docs/: README.md  README_SOLUCOES.md  README_UNIFIED.md
examples/: exemplo_uso.py
modules/: __init__.py  upscaling_advanced.py  upscaling_realce_huggingface.py  upscaling_realce_pillow_opencv.py  upscaling_realce_realesrgan.py  upscaling_realce_realesrgan_new.py  upscaling_smart.py  upscaling_unified.py  upscaling_waifu2x.py
tests/: __init__.py  test_installation.py  test_models.py
